--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.5",
+    "@react-spring/web": "^9.7.5",
+    "framer-motion": "^11.18.1",
     "jotai": "^2.11.0",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "smooth-scrollbar": "^8.8.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
