--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.5",
+    "@gsap/react": "^2.1.2",
     "@react-spring/web": "^9.7.5",
     "framer-motion": "^11.18.1",
+    "gsap": "^3.12.7",
     "jotai": "^2.11.0",
     "next": "15.1.4",
     "react": "^19.0.0",
