--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "smooth-scrollbar": "^8.8.4"
   },
   "devDependencies": {
