--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.2",
     "@react-spring/web": "^9.7.5",
     "@vis.gl/react-google-maps": "^1.5.0",
+    "echarts": "^6.0.0",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "jotai": "^2.11.0",
